--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,83 @@
+:root {
+  --full: calc(var(--vh, 1vh) * 100);
+  --limit: 600px;
+  --spacing: 1em;
+  --opacity-recolor: 0.6;
+  --create-space: 4.6rem;
+
+  --darkest: #202124;
+  --dark: #27292b;
+  --middle: #777777;
+  --light: #e5e5e5;
+  --lightest: #f0f0f0;
+  --accent: #e2a316;
+  --accent-contract: var(--darkest);
+
+  --DARK-lvl2: var(--dark);
+  --DARK-background: var(--darkest);
+  --DARK-foreground: var(--light);
+
+  --LIGHT-lvl2: var(--lightest);
+  --LIGHT-foreground: var(--darkest);
+  --LIGHT-background: var(--light);
+}
+
+body {
+  --lvl2: var(--DARK-lvl2);
+  --background: var(--DARK-background);
+  --foreground: var(--DARK-foreground);
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+
+  background: var(--background);
+  color: var(--foreground);
+  font-family: sans-serif;
+  font-size: 12pt;
+  line-height: 1.2;
+}
+
+.app {
+  display: flex;
+  min-height: var(--full);
+  width: 100%;
+}
+
 .hide {
   display: none;
 }
 
 .dnd {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
 
+.dnd .container {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  max-width: var(--limit);
+  max-height: var(--limit);
+  border: 4px dashed var(--foreground);
+  border-radius: 10px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.8rem;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
